# CCTV

./: .gitignore  BlobDetector.cpp  BlobDetector.h  CMakeLists.txt  FilterTool.cpp  FilterTool.h  GraphTool.cpp  README.md  StarSkeleton.cpp  StarSkeleton.h  main.cpp
client/: BlobDetector.cpp  BlobDetector.h  CMakeLists.txt  GraphTool.cpp  GraphTool.h  StarSkeleton.cpp  main.cpp
server/: server.py
