cmake_minimum_required(VERSION 3.6)
project(SafeDesk)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp)
add_executable(SafeDesk ${SOURCE_FILES})
target_link_libraries(SafeDesk /usr/local/lib/libcvblob.dylib)
target_link_libraries( SafeDesk ${OpenCV_LIBS} )